--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -1295,6 +1295,16 @@ body {
 
 .skill-progress {
     position: relative;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+}
+
+.skill-progress:hover {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    font-weight: bold;
 }
 
 .skills-section {
@@ -1370,7 +1380,7 @@ body {
 .progress-bar span {
     position: absolute;
     top: -20px;
-    right: 15px; 
+    right: 15px;
 }
 
 
