--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -290,7 +290,7 @@ fieldset[disabled] .btn-xl.active {
 
 header {
     text-align: center;
-    color: #fff;
+    color: #3e1313;
     background-attachment: scroll;
     background-image: url('{{ site.baseurl }}/img/design2.jpeg');
     background-position: center center;
